bpy.context attribute not available after reloading a scene using python #100446

Closed
opened 2022-08-16 21:14:20 +02:00 by Maurizio Memoli · 4 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: (newest version of Blender that worked as expected)

Short description of error
It looks like when the scene is reloaded running a python script in the text editor the context loses all the attributes.
Probably this is due to the missing context window.
I am not sure if this is a bug, but so far I was able to make it work only with workarounds using the temp_override.

Exact steps for others to reproduce the error
Just create a scene, save it and run the following code

import bpy


print(bpy.context.selected_objects)
file_path = bpy.data.filepath
print("================AREAS=====================")
print(bpy.context.screen)
for area in bpy.context.screen.areas:
    print(area.type)
print(bpy.context.window)


bpy.ops.wm.open_mainfile(filepath=file_path)
print("================AREAS=====================")
print(bpy.context.screen)
if bpy.context.screen:
    for area in bpy.context.screen.areas:
        print(area.type)
print(bpy.context.window)
wm = bpy.context.window_manager
win= wm.windows[0]

with bpy.context.temp_override(window=win):
    print(bpy.context.selected_objects)
print(bpy.context.selected_objects)    
    
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: (newest version of Blender that worked as expected) **Short description of error** It looks like when the scene is reloaded running a python script in the text editor the context loses all the attributes. Probably this is due to the missing context window. I am not sure if this is a bug, but so far I was able to make it work only with workarounds using the temp_override. **Exact steps for others to reproduce the error** Just create a scene, save it and run the following code ``` import bpy print(bpy.context.selected_objects) file_path = bpy.data.filepath print("================AREAS=====================") print(bpy.context.screen) for area in bpy.context.screen.areas: print(area.type) print(bpy.context.window) bpy.ops.wm.open_mainfile(filepath=file_path) print("================AREAS=====================") print(bpy.context.screen) if bpy.context.screen: for area in bpy.context.screen.areas: print(area.type) print(bpy.context.window) wm = bpy.context.window_manager win= wm.windows[0] with bpy.context.temp_override(window=win): print(bpy.context.selected_objects) print(bpy.context.selected_objects) ```

Added subscriber: @maumemoli

Added subscriber: @maumemoli
Member

Closed as duplicate of #92464

Closed as duplicate of #92464
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

This is essentially the same as #92464, and it seems the developers are proposing temporary overrides as a solution as you did already. So I merged to that task.

This is essentially the same as #92464, and it seems the developers are proposing temporary overrides as a solution as you did already. So I merged to that task.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100446
No description provided.